log
Fri, Mar 21, 2025 11:44:34 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat, Mar 22, 2025 12:40:11 AM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:16: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       elemento = k;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
92b07e4
Sat, Mar 22, 2025  5:07:05 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7a2fd4c
Sat, Mar 22, 2025  5:16:31 PM: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|3
total_score: 20/70
6088847
Sat, Mar 22, 2025  5:38:01 PM: 
 exercises.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int num = first(L);
              ^~~~~
exercises.c:63:15: error: comparison between pointer and integer [-Werror]
    while (num != NULL)
               ^~
exercises.c:66:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       num = next(L);
           ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:18: error: comparison between pointer and integer [-Werror]
       if (indice == elem)
                  ^~
cc1.exe: all warnings being treated as errors
Compilation failed
9748e97
Sat, Mar 22, 2025  5:41:31 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
7020062
Sat, Mar 22, 2025  6:02:12 PM: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  3|2
total_score: 40/70
ec6a53a
Sat, Mar 22, 2025  6:41:35 PM: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  4|1
total_score: 50/70
c5693d8
Sat, Mar 22, 2025  9:20:04 PM: 
 exercises.c | 22 +++++++++++++++++-----
 1 file changed, 17 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:139:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d709bc2
Sat, Mar 22, 2025 10:05:38 PM: 
 exercises.c | 25 ++++++++++++++++---------
 1 file changed, 16 insertions(+), 9 deletions(-)
 tests:  9|0
total_score: 70/70
a0b4830
